k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: focusboard-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: focusboard-web
  template:
    metadata:
      labels:
        app: focusboard-web
    spec:
      containers:
        - name: web
          image: nedakh126/focusboard-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
