k8s/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  selector:
    app: focusboard-cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
