k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: focusboard-web-service
spec:
  type: NodePort
  selector:
    app: focusboard-web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
